<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity">

    <EditText
        android:id="@+id/editTextAdd"
        android:layout_width="252dp"
        android:layout_height="78dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/add_pref_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@id/buttonSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageButton
        android:id="@+id/champButtonOne"
        android:layout_width="205dp"
        android:layout_height="211dp"
        app:layout_constraintBottom_toTopOf="@+id/champButtonThree"
        app:layout_constraintEnd_toStartOf="@+id/champButtonTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAdd" />

    <ImageButton
        android:id="@+id/champButtonTwo"
        android:layout_width="205dp"
        android:layout_height="211dp"
        app:layout_constraintBottom_toTopOf="@+id/champButtonFour"
        app:layout_constraintStart_toEndOf="@+id/champButtonOne"
        app:layout_constraintTop_toBottomOf="@+id/editTextAdd"
        />
    <ImageButton
        android:id="@+id/champButtonThree"
        android:layout_width="205dp"
        android:layout_height="211dp"
        app:layout_constraintTop_toBottomOf="@id/champButtonOne"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/champButtonFour"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageButton
        android:id="@+id/champButtonFour"
        android:layout_width="205dp"
        android:layout_height="211dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/champButtonThree"
        app:layout_constraintTop_toBottomOf="@+id/champButtonTwo"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_account_circle_black_24dp"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="653dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabExitLanding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_exit_to_app_black_24dp"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="653dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="316dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_pref_test"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/save_text"
        app:layout_constraintBottom_toBottomOf="@+id/editTextAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextAdd"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>