<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChampionActivity">

    <ImageView
        android:id="@+id/championImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/champNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/name_placeholder"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/championImageView" />

    <TextView
        android:id="@+id/roleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/role_placeholder"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/winrateText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/champNameText" />

    <TextView
        android:id="@+id/winrateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/winrate_placeholder"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/roleText"
        app:layout_constraintTop_toBottomOf="@+id/champNameText" />

    <TextView
        android:id="@+id/itemTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/item_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/abilityTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roleText" />

    <TextView
        android:id="@+id/abilityTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/runes_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemTitleText"
        app:layout_constraintTop_toBottomOf="@+id/winrateText" />

    <ImageView
        android:id="@+id/itemOneImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemTitleText"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/itemOneText"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="40sp"
        android:gravity="center"
        android:lines="@integer/num_lines"
        android:text="@string/item_placehold"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/runeOneImage"
        app:layout_constraintStart_toEndOf="@+id/itemOneImage"
        app:layout_constraintTop_toBottomOf="@+id/itemTitleText" />

    <ImageView
        android:id="@+id/runeOneImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30sp"
        app:layout_constraintEnd_toStartOf="@+id/runeOneText"
        app:layout_constraintTop_toBottomOf="@+id/abilityTitleText"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/runeOneText"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30sp"
        android:gravity="center"
        android:lines="@integer/num_lines"
        android:text="@string/rune_placeholder"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abilityTitleText" />

    <ImageView
        android:id="@+id/itemTwoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemOneText"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/itemTwoText"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="40sp"
        android:gravity="center"
        android:lines="@integer/num_lines"
        android:text="@string/item_placehold"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/runeTwoImage"
        app:layout_constraintStart_toEndOf="@+id/itemTwoImage"
        app:layout_constraintTop_toBottomOf="@+id/itemOneText" />

    <ImageView
        android:id="@+id/runeTwoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30sp"
        app:layout_constraintEnd_toStartOf="@+id/runeTwoText"
        app:layout_constraintTop_toBottomOf="@+id/runeOneText"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/runeTwoText"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30sp"
        android:gravity="center"
        android:lines="@integer/num_lines"
        android:text="@string/rune_placeholder"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runeOneText" />

    <ImageView
        android:id="@+id/itemThreeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemTwoText"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/itemThreeText"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="40sp"
        android:gravity="center"
        android:lines="@integer/num_lines"
        android:text="@string/item_placehold"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/runeThreeImage"
        app:layout_constraintStart_toEndOf="@+id/itemThreeImage"
        app:layout_constraintTop_toBottomOf="@+id/itemTwoText" />

    <ImageView
        android:id="@+id/runeThreeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30sp"
        app:layout_constraintEnd_toStartOf="@+id/runeThreeText"
        app:layout_constraintTop_toBottomOf="@+id/runeTwoText"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/runeThreeText"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30sp"
        android:gravity="center"
        android:lines="@integer/num_lines"
        android:text="@string/rune_placeholder"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runeTwoText" />

    <ImageView
        android:id="@+id/itemFourImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemThreeText"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/itemFourText"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="40sp"
        android:gravity="center"
        android:lines="@integer/num_lines"
        android:text="@string/item_placehold"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/runeFourImage"
        app:layout_constraintStart_toEndOf="@+id/itemFourImage"
        app:layout_constraintTop_toBottomOf="@+id/itemThreeText" />

    <ImageView
        android:id="@+id/runeFourImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30sp"
        app:layout_constraintEnd_toStartOf="@+id/runeFourText"
        app:layout_constraintTop_toBottomOf="@+id/runeThreeText"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/runeFourText"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30sp"
        android:gravity="center"
        android:lines="@integer/num_lines"
        android:text="@string/rune_placeholder"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runeThreeText" />

    <ImageView
        android:id="@+id/itemFiveImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemFourText"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/itemFiveText"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="40sp"
        android:gravity="center"
        android:lines="@integer/num_lines"
        android:text="@string/item_placehold"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/runeFourImage"
        app:layout_constraintStart_toEndOf="@+id/itemFiveImage"
        app:layout_constraintTop_toBottomOf="@+id/itemFourText" />

    <ImageView
        android:id="@+id/runeFiveImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toStartOf="@+id/runeFourText"
        app:layout_constraintTop_toBottomOf="@+id/runeThreeText"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/runeFiveText"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:lines="@integer/num_lines"
        android:text="@string/rune_placeholder"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runeThreeText" />

    <ImageView
        android:id="@+id/itemSixImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemFiveText"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:layout_marginStart="30sp" />

    <TextView
        android:id="@+id/itemSixText"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="40sp"
        android:gravity="center"
        android:lines="@integer/num_lines"
        android:text="@string/item_placehold"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/runeFourImage"
        app:layout_constraintStart_toEndOf="@+id/itemSixImage"
        app:layout_constraintTop_toBottomOf="@+id/itemFiveText" />

    <ImageView
        android:id="@+id/runeSixImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toStartOf="@+id/runeFourText"
        app:layout_constraintTop_toBottomOf="@+id/runeThreeText"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/runeSixText"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:lines="@integer/num_lines"
        android:text="@string/rune_placeholder"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runeThreeText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabHomeChampion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_home_black_24dp"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="653dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabExitChampion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_exit_to_app_black_24dp"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="653dp" />

</androidx.constraintlayout.widget.ConstraintLayout>